# mlx-ctc

./: CMakeLists.txt  README.md  bindings.cpp  pyproject.toml
ctc_loss/: ctc_loss.h  ctc_loss.metal  ctc_loss_cpu.cpp  ctc_loss_gpu.cpp  ctc_loss_inst.cpp
