[project]
name = "mlx_ctc"
version = "0.0.1"
authors = [
  { name = "Yury Popov", email = "dev@phoenix.dj" },
]
description = "C++ and Metal extensions for MLX CTC Loss"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
  "Programming Language :: C++",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = []

[project.urls]
Homepage = "https://github.com/djphoenix/mlx-ctc"
Issues = "https://github.com/djphoenix/mlx-ctc/issues"

[build-system]
requires = [
  "setuptools>=42",
  "cmake>=3.24",
  "mlx>=0.29.0",
  "nanobind==2.4.0",
]
build-backend = "setuptools.build_meta"
